# voice_match

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  EXISTING_NGINX_SETUP.md  FOODGRAM_GATEWAY_SETUP.md  GITHUB_SECRETS_SETUP.md  README.md  SERVER_SETUP_109.73.194.190.md  SERVER_SETUP_EXISTING_PROJECTS.md  docker-compose.prod.yml  docker-compose.yml  existing-nginx-voice-match.conf  fix_imports.sh  foodgram-gateway-voice-match.conf  main.py  nginx-site.conf  pyproject.toml  requirements.txt  restructure.sh  server-setup.sh  start.bat  start.sh  weights.json
.github/workflows/: deploy.yml
app/: interface.py  modifiers.py  utils.py  voice_compare_dual.py
models/: __init__.py  antispoofing.py  bayesian_scoring.py  ecapa.py  formant_comparison.py  formant_constraints.py  formant_core.py  formant_tracker.py  formant_visualization.py  metadata.py  modification_detector.py  nasal_analyzer.py  plda_scoring.py  resemblyzer.py  temporal_analyzer.py  vocal_tract.py  voice_features.py  xvector.py  yamnet.py
models/formant/: __init__.py  formant_statistics.py
nginx/: nginx-docker.conf  nginx.conf
src/voice_match/: __init__.py  __main__.py  config.py  constants.py  log.py
src/voice_match/detection/: __init__.py  antispoofing.py  modification.py  modifiers.py  nasal_analyzer.py  temporal_analyzer.py
src/voice_match/features/: __init__.py  formant_dynamics.py  fricative.py  jitter_shimmer.py  metadata.py  nasal.py  vocal_tract.py  voice_features.py  yamnet_features.py
src/voice_match/models/: __init__.py  ecapa.py  resemblyzer.py  xvector.py  yamnet.py
src/voice_match/models/formant/: __init__.py  constraints.py  core.py  statistics.py  tracker.py
src/voice_match/scoring/: __init__.py  bayesian.py  plda.py
src/voice_match/services/: __init__.py  comparison.py  preprocessing.py  report.py  report_legacy.py
src/voice_match/ui/: __init__.py  interface.py  visualization.py
