[project]
name = "voice-match"
version = "0.2.0"
description = "Система экспертной верификации личности по голосу"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Анфиса Ковганюк", email = "anfisa.kov@yahoo.com" },
]
dependencies = [
    "torch>=2.2.0",
    "speechbrain>=1.0.0",
    "resemblyzer>=0.1.3",
    "webrtcvad>=2.0.10",
    "audiomentations>=0.36.0",
    "noisereduce>=3.0.0",
    "librosa>=0.10.2",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "numpy>=1.26.0,<2.0.0",
    "soundfile>=0.12.1",
    "gradio>=4.44.0",
    "pydub>=0.25.1",
    "tensorflow>=2.16.0",
    "tensorflow-hub>=0.16.0",
    "pyannote.audio>=3.3.0",
    "huggingface-hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── ruff ─────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — пока игнорируем, будем чинить поэтапно
]

[tool.ruff.lint.isort]
known-first-party = ["voice_match"]
force-single-line = false
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert допустим в тестах

# ── mypy ─────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
