[project]
name = 'voice-match'
version = '0.2.0'
description = 'Система экспертной верификации личности по голосу'
readme = 'README.md'
license = {text = 'Apache-2.0'}
requires-python = '>=3.12'
authors = [
    {name = 'Анфиса Ковганюк', email = 'anfisa.kov@yahoo.com'},
]
dependencies = [
    # ── ML-фреймворки (пинены на совместимую связку) ──
    'torch>=2.6.0,<2.7',
    'torchaudio>=2.6.0,<2.7',
    'speechbrain>=1.0.0,<2.0',
    'pyannote.audio>=3.3.0,<3.5',
    'tensorflow>=2.16.0,<2.19',
    'tensorflow-hub>=0.16.0,<0.17',
    'resemblyzer>=0.1.3',
    # ── Аудио ──
    'librosa>=0.10.2',
    'soundfile>=0.12.1',
    'pydub>=0.25.1',
    'webrtcvad>=2.0.10',
    'audiomentations>=0.36.0',
    'noisereduce>=3.0.0',
    # ── Числа и визуализация ──
    'numpy>=1.26.0,<2.0.0',
    'scipy>=1.14.0',
    'matplotlib>=3.9.0',
    # ── Инфраструктура ──
    'gradio>=4.44.0',
    'huggingface-hub>=0.24.0',
    # ── Совместимость (webrtcvad, tensorflow-hub
    #    используют pkg_resources, удалённый
    #    в setuptools>=82) ──
    'setuptools>=70.0.0,<81',
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    'ruff>=0.5.0',
    'mypy>=1.11.0',
    'pytest>=8.3.0',
    'pytest-cov>=5.0.0',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

# ── hatch (build) ────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ['src/voice_match']

# ── ruff ─────────────────────────────────────────
[tool.ruff]
target-version = 'py312'
line-length = 79

[tool.ruff.lint]
select = [
    'E',     # pycodestyle errors
    'W',     # pycodestyle warnings
    'F',     # pyflakes
    'I',     # isort
    'N',     # pep8-naming
    'UP',    # pyupgrade (modernize syntax)
    'B',     # flake8-bugbear
    'A',     # flake8-builtins
    'C4',    # flake8-comprehensions
    'SIM',   # flake8-simplify
    'TCH',   # flake8-type-checking
    'RUF',   # ruff-specific rules
]
ignore = [
    'E501',   # line too long
    'RUF001', # ambiguous unicode in string (кириллица)
    'RUF002', # ambiguous unicode in docstring (кириллица)
    'RUF003', # ambiguous unicode in comment (кириллица)
]

[tool.ruff.lint.isort]
known-first-party = ['voice_match']
force-single-line = false
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
'tests/*' = ['S101']

# ── mypy ─────────────────────────────────────────
[tool.mypy]
python_version = '3.12'
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py']
python_functions = ['test_*']
addopts = '-v --tb=short'
